--- a/index.html
+++ b/index.html
@@ -11,11 +11,69 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <!-- MDB -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.0.0/mdb.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/style.css">
     <title>Metalicas Soto</title>
 </head>
 
 <body>
-    <img src="img/metalicasoto_reparación_web.jpg" alt="" class="img-fluid">
+    <!-- Navbar -->
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark navtrans">
+        <!-- Container wrapper -->
+        <div class="container-fluid">
+            <!-- Navbar brand -->
+            <a class="navbar-brand me-2" href="https://mdbgo.com/">
+                <img src="https://picsum.photos/300/150" height="120" alt="MDB Logo" loading="lazy"
+                    style="margin-top: -1px;" />
+            </a>
+
+            <!-- Toggle button -->
+            <button class="navbar-toggler" type="button" data-mdb-toggle="collapse"
+                data-mdb-target="#navbarButtonsExample" aria-controls="navbarButtonsExample" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <i class="fas fa-bars"></i>
+            </button>
+
+            <!-- Collapsible wrapper -->
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto fuentecita">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">¿Quienes somos?</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active">Nuestros Proyectos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- Collapsible wrapper -->
+        </div>
+        <!-- Container wrapper -->
+    </nav>
+    <!-- Navbar -->
+    <!-- <img src="https://picsum.photos/1920/1080" alt="" class="img-fluid"> -->
+    <div class="bg-image d-flex justify-content-between align-items-end px-4 fuentecita text-center" style="
+    background-image: url('https://mdbcdn.b-cdn.net/img/Photos/Others/images/76.webp');
+    height: 100vh;">
+        <div class="row w-100">
+            <div class="col-md-4">
+                <h4 class="text-white">Page title</h4>
+            </div>
+            <div class="col-md-4">
+                <h4 class="text-white">Page title</h4>
+            </div>
+            <div class="col-md-4">
+                <h4 class="text-white">Page title</h4>
+            </div>
+        </div>
+    </div>
     <!-- MDB -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.0.0/mdb.min.js"></script>
 </body>
