corregido menu de hamburguesa movil

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </button>
 
             <!-- Collapsible wrapper -->
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse" id="navbarButtonsExample">
                 <ul class="navbar-nav ms-auto fuentecita">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Inicio</a>
